[package]
name = "cumulus-primitives-utility"
version = "0.1.0"
authors = ["Axia Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
# Axlib dependencies
sp-std = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-trie = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
frame-support = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }

# Axia dependencies
axia-allychain = { git = "https://github.com/axtend/axia", default-features = false, branch = "66cb46b" }
axia-primitives = { git = "https://github.com/axtend/axia", default-features = false, branch = "66cb46b" }
axia-core-primitives = { git = "https://github.com/axtend/axia", default-features = false, branch = "66cb46b" }
xcm = { git = "https://github.com/axtend/axia", default-features = false, branch = "66cb46b" }

cumulus-primitives-core = { path = "../core", default-features = false }

# Other dependencies
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = [ "derive" ] }


[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-std/std",
	"axia-primitives/std",
	"axia-allychain/std",
	"axia-core-primitives/std",
	"sp-runtime/std",
	"sp-trie/std",
	"frame-support/std",
	"cumulus-primitives-core/std",
]
