[package]
name = "cumulus-primitives-utility"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
# Substrate dependencies
sp-std = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
sp-trie = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
frame-support = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }

# Axia dependencies
axia-allychain = { git = "https://github.com/purestake/axia", default-features = false, branch = "moonbeam-axia-v0.9.17" }
axia-primitives = { git = "https://github.com/purestake/axia", default-features = false, branch = "moonbeam-axia-v0.9.17" }
axia-core-primitives = { git = "https://github.com/purestake/axia", default-features = false, branch = "moonbeam-axia-v0.9.17" }
xcm = { git = "https://github.com/purestake/axia", default-features = false, branch = "moonbeam-axia-v0.9.17" }

cumulus-primitives-core = { path = "../core", default-features = false }

# Other dependencies
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = [ "derive" ] }


[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-std/std",
	"axia-primitives/std",
	"axia-allychain/std",
	"axia-core-primitives/std",
	"sp-runtime/std",
	"sp-trie/std",
	"frame-support/std",
	"cumulus-primitives-core/std",
]
