[package]
name = "cumulus-primitives-utility"
version = "0.1.0"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2021"

[dependencies]
# Substrate dependencies
sp-std = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-trie = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
frame-support = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }

# Axia dependencies
axia-allychain = { git = "https://github.com/axtend/axia", default-features = false, branch = "axia" }
axia-primitives = { git = "https://github.com/axtend/axia", default-features = false, branch = "axia" }
axia-core-primitives = { git = "https://github.com/axtend/axia", default-features = false, branch = "axia" }
xcm = { git = "https://github.com/axtend/axia", default-features = false, branch = "axia" }

cumulus-primitives-core = { path = "../core", default-features = false }

# Other dependencies
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = [ "derive" ] }


[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-std/std",
	"axia-primitives/std",
	"axia-allychain/std",
	"axia-core-primitives/std",
	"sp-runtime/std",
	"sp-trie/std",
	"frame-support/std",
	"cumulus-primitives-core/std",
]
