[package]
name = "cumulus-test-relay-sproof-builder"
version = "0.1.0"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2021"

[dependencies]
# Other dependencies
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = [ "derive" ] }

# Axlib dependencies
sp-state-machine = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-std = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }

# Axia dependencies
axia-primitives = { git = "https://github.com/axtend/axia", default-features = false, branch = "66cb46b" }

# Cumulus dependencies
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-state-machine/std",
	"sp-runtime/std",
	"sp-std/std",
	"cumulus-primitives-core/std",
]
