[package]
name = "cumulus-test-runtime"
version = "0.1.0"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.132", optional = true, features = ["derive"] }

# Axlib dependencies
frame-executive = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
frame-support = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
frame-system = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
frame-system-rpc-runtime-api = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
pallet-balances = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
pallet-sudo = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
pallet-timestamp = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
pallet-transaction-payment = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-block-builder = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-inherents = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-io = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-offchain = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-session = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-std = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-transaction-pool = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-version = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }

# Cumulus dependencies
cumulus-pallet-allychain-system = { path = "../../pallets/allychain-system", default-features = false }
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-primitives-timestamp = { path = "../../primitives/timestamp", default-features = false }

[build-dependencies]
axlib-wasm-builder = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"cumulus-pallet-allychain-system/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-balances/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
increment-spec-version = []
