[package]
name = "cumulus-test-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.132", optional = true, features = ["derive"] }

# Axlib dependencies
frame-executive = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
frame-support = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
frame-system = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
frame-system-rpc-runtime-api = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
pallet-balances = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
pallet-sudo = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
pallet-timestamp = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
pallet-transaction-payment = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-api = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-block-builder = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-core = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-inherents = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-io = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-offchain = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-session = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-std = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-transaction-pool = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-version = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }

# Cumulus dependencies
cumulus-pallet-allychain-system = { path = "../../pallets/allychain-system", default-features = false }
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-primitives-timestamp = { path = "../../primitives/timestamp", default-features = false }

[build-dependencies]
axlib-wasm-builder = { git = "https://github.com/axtend/axlib", branch = "axlib" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"cumulus-pallet-allychain-system/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-balances/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
increment-spec-version = []
