[package]
name = "cumulus-test-service"
version = "0.1.0"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.0" }
rand = "0.8.5"
serde = { version = "1.0.132", features = ["derive"] }
async-trait = "0.1.42"
tokio = { version = "1.17.0", features = ["macros"] }

# Axlib
frame-system = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-transaction-payment = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
frame-system-rpc-runtime-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-basic-authorship = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-chain-spec = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-transaction-pool-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-executor = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-network = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-rpc = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "c92f69d", features = [ "wasmtime" ] }
sc-tracing = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-arithmetic = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-keyring = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-state-machine = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-timestamp = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-trie = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-tracing = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
axlib-test-client = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

# Axia
axia-primitives = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-service = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-test-service = { git = "https://github.com/axtend/axia", branch = "66cb46b" }

# Cumulus
cumulus-client-consensus-relay-chain = { path = "../../client/consensus/relay-chain" }
cumulus-client-network = { path = "../../client/network" }
cumulus-client-service = { path = "../../client/service" }
cumulus-client-consensus-common = { path = "../../client/consensus/common" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-allychain-inherent = { path = "../../primitives/allychain-inherent" }
cumulus-test-runtime = { path = "../runtime" }
cumulus-test-relay-validation-worker-provider = { path = "../relay-validation-worker-provider" }
cumulus-relay-chain-local = { path = "../../client/relay-chain-local" }

criterion = { version = "0.3.5", features = [ "async_tokio" ] }

parking_lot = "0.12.0"

# RPC related dependencies
jsonrpc-core = "18.0.0"

[dev-dependencies]
futures = "0.3.5"

# Axia dependencies
axia-test-service = { git = "https://github.com/axtend/axia", branch = "66cb46b" }

# Axlib dependencies
sc-cli = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
axlib-test-utils = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[[bench]]
name = "transaction_throughput"
harness = false
