[package]
name = "cumulus-test-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.0" }
rand = "0.8.5"
serde = { version = "1.0.132", features = ["derive"] }
async-trait = "0.1.42"
tokio = { version = "1.17.0", features = ["macros"] }

# Axlib
frame-system = { git = "https://github.com/axtend/axlib", branch = "axlib" }
pallet-transaction-payment = { git = "https://github.com/axtend/axlib", branch = "axlib" }
frame-system-rpc-runtime-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-basic-authorship = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-chain-spec = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-transaction-pool-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-executor = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-network = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-rpc = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "axlib", features = [ "wasmtime" ] }
sc-tracing = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-arithmetic = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-keyring = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-state-machine = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-timestamp = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-trie = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-tracing = { git = "https://github.com/axtend/axlib", branch = "axlib" }
axlib-test-client = { git = "https://github.com/axtend/axlib", branch = "axlib" }

# Axia
axia-primitives = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-service = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-test-service = { git = "https://github.com/axtend/axia", branch = "axia" }

# Cumulus
cumulus-client-consensus-relay-chain = { path = "../../client/consensus/relay-chain" }
cumulus-client-network = { path = "../../client/network" }
cumulus-client-service = { path = "../../client/service" }
cumulus-client-consensus-common = { path = "../../client/consensus/common" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-allychain-inherent = { path = "../../primitives/allychain-inherent" }
cumulus-test-runtime = { path = "../runtime" }
cumulus-test-relay-validation-worker-provider = { path = "../relay-validation-worker-provider" }
cumulus-relay-chain-local = { path = "../../client/relay-chain-local" }

criterion = { version = "0.3.5", features = [ "async_tokio" ] }

parking_lot = "0.12.0"

# RPC related dependencies
jsonrpc-core = "18.0.0"

[dev-dependencies]
futures = "0.3.5"

# Axia dependencies
axia-test-service = { git = "https://github.com/axtend/axia", branch = "axia" }

# Axlib dependencies
sc-cli = { git = "https://github.com/axtend/axlib", branch = "axlib" }
axlib-test-utils = { git = "https://github.com/axtend/axlib", branch = "axlib" }

[[bench]]
name = "transaction_throughput"
harness = false
