[package]
name = 'seedling-runtime'
version = '0.1.0'
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
allychain-info = { path = "../pallets/allychain-info", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.132", optional = true, features = ["derive"] }

# Substrate dependencies
sp-std = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-io = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-version = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-session = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-offchain = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-block-builder = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-transaction-pool = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-inherents = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }

frame-support = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
frame-executive = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
frame-system = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
pallet-sudo = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
pallet-balances = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }

# Cumulus dependencies
cumulus-pallet-allychain-system = { path = "../../pallets/allychain-system", default-features = false }
cumulus-pallet-solo-to-para = { path = "../../pallets/solo-to-para", default-features = false }
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-sudo/std",
	"pallet-balances/std",
	"allychain-info/std",
	"cumulus-pallet-allychain-system/std",
	"cumulus-pallet-solo-to-para/std",
	"cumulus-primitives-core/std",
]
